erDiagram
    FreelancerProfile ||--o{ FreelancerEducation : "has"
    FreelancerProfile ||--o{ FreelancerCertification : "has"
    FreelancerProfile ||--o{ FreelancerPortfolio : "has"
    FreelancerProfile ||--o{ FreelancerLanguage : "has"
    FreelancerProfile ||--o{ Job : "posts as client"
    FreelancerProfile }|--|{ Skill : "possesses"
    Job ||--o{ JobSkill : "requires"
    Skill ||--o{ JobSkill : "is required by"
    Category ||--o{ Job : "categorizes"
    Job ||--o{ Bid : "receives"
    FreelancerProfile ||--o{ Bid : "places"

    FreelancerProfile {
        int Id PK
        string UserId
        string FirstName
        string LastName
        string Username
        string Email
        string PhoneNumber
        datetime DateOfBirth
        string Gender
        string ProfilePhotoUrl
        string ProfessionalTitle
        string AboutMe
    }

    FreelancerEducation {
        int Id PK
        int FreelancerProfileId FK
        string Institution
        string Degree
        string StartYear
        string EndYear
    }

    FreelancerCertification {
        int Id PK
        int FreelancerProfileId FK
        string Name
        string IssuingOrganization
        datetime IssueDate
    }

    FreelancerPortfolio {
        int Id PK
        int FreelancerProfileId FK
        string Title
        string Description
        string ProjectUrl
    }

    FreelancerLanguage {
        int Id PK
        int FreelancerProfileId FK
        string LanguageName
        string Proficiency
    }

    Skill {
        int Id PK
        string Name
    }

    Job {
        int JobId PK
        int ClientProfileId FK
        int CategoryId FK
        string Title
        string Description
        string JobType
        string Status
        decimal FixedBudget
        decimal MinHourlyRate
        decimal MaxHourlyRate
        datetime Deadline
        string TagsJson
        string AttachmentUrl
        boolean IsDeleted
    }

    Category {
        int Id PK
        string Name
        string Description
    }

    JobSkill {
        int JobId FK
        int SkillId FK
    }

    Bid {
        int Id PK
        int JobId FK
        int FreelancerProfileId FK
        decimal Amount
    }
